# libigl-python-bindings-docs-versioning

./: pyproject.toml  setup.py  sitemap.xml  versions.json
.github/workflows/: build_wheels.yml  wheels.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/contributing/: index.html
0.1/igl_docs/: index.html
0.1/tut-chapter0/: index.html
0.1/tut-chapter5/: index.html
0.1/tut-chapter7/: index.html
latest/igl_docs/: index.html
latest/tut-chapter0/: index.html
latest/tut-chapter1/: index.html
latest/tut-chapter2/: index.html
latest/tut-chapter3/: index.html
latest/tut-chapter4/: index.html
latest/tut-chapter5/: index.html
latest/tut-chapter6/: index.html
latest/tut-chapter7/: index.html
main/: 404.html  index.html  sitemap.xml
main/contributing/: index.html
main/igl_docs/: index.html
main/tut-chapter0/: index.html
main/tut-chapter5/: index.html
main/tut-chapter7/: index.html
tut-chapter0/: index.html
tut-chapter1/: index.html
tut-chapter5/: index.html
tut-chapter7/: index.html
